Fri Oct  1 15:12:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (init_stdhandle): redirect unopened IOs to NUL.
	  backport r11362 from trunk. [ruby-core:31445]

Mon Aug 23 11:42:41 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (obj_to_asn1bool): fixed ASN1::Boolean
	  encoding issue for OpenSSL 1.0.0 compatibility.
	  ASN1::Boolean.new(false).to_der wrongly generated "\1\1\377" which
	  means 'true'.  [BUG:3735] 
	  
	  ASN1_TYPE_set of OpenSSL <= 0.9.8 treats value 0x100 as 'false' but
	  OpenSSL >= 1.0.0 treats it as 'true'.  ruby-ossl was using 0x100 for
	  'false' for backward compatibility.  Just use 0x0 for the case
	  OpenSSL >= OpenSSL 0.9.7.

	* test/openssl/test_asn1.rb: test added.

Tue Aug 10 17:35:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest::parse_uri):
	  rollup leading slashes. [ruby-core:31657]
	  patched by Jamison Wilde
	  NOTE: //authority/path is valid relative URI both RFC2396 and
	  RFC3986. So when give a relative URI-like string to URI lib,
	  users must care leading slashes.

Fri Jul 30 08:51:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): home directory must be absolute.
	  [ruby-core:31537]

Fri Jul 30 08:33:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should check if could find user.
	  [ruby-core:31538]

Thu Jul 29 22:43:57 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/ssl.rb (WEBrick::Utils.create_self_signed_cert): wrongly
	  created dummy SSL certificate with version == 3 (no such version) and
	  serial == 0 (must be >0).

Sat Jul 24 15:44:29 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fev_initialize): initialize pTypeInfo.
	  [ruby-core:31304][Bug #3576].

Tue Jul 13 21:46:38 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c, ext/openssl/lib/openssl/config.rb,