@@ -1,3 +1,8 @@
+Sun Oct  3 18:30:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (rb_intern): should check symbol table overflow.
+	 #3900 [ruby-dev:42330]
+
 Fri Oct  1 15:12:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (init_stdhandle): redirect unopened IOs to NUL.
